Background color test sketch 🌽
* Fix a loose contract in the audit.
* Add test coverage for the audit.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "npm run lint --silent && npm run unit",
-    "unit": "mocha test/*.js --timeout 60000",
+    "unit": "mocha test/**/*.js --timeout 60000",
     "start": "node ."
   },
   "repository": {
